--- a/app/src/main/res/drawable/ic_references1.xml
+++ b/app/src/main/res/drawable/ic_references1.xml
@@ -8,19 +8,27 @@
       android:fillColor="#000000"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M13.6,15.9c-1,1.1 -2.4,1.7 -3.1,1.5 -2,-0.8 -2.6,1.1 -1,3.2 1.3,1.8 1.5,1.8 4.9,-1.5 1.9,-1.9 3.3,-3.8 3,-4.3 -0.8,-1.3 -1.9,-1 -3.8,1.1z"
+      android:pathData="M9.7,16.6c-0.8,0.8 0.1,2.4 1.4,2.4 0.5,-0 0.9,-0.7 0.9,-1.5 0,-1.5 -1.2,-2 -2.3,-0.9z"
       android:fillColor="#000000"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M22.2,17.2c0.3,0.9 2.9,1.3 9.1,1.3 12,-0 11.8,-1.9 -0.1,-2.3 -7.3,-0.2 -9.3,-0 -9,1z"
+      android:pathData="M16,17.5c0,1.3 1.7,1.5 12.3,1.3 16,-0.4 15.8,-2.2 -0.3,-2.6 -10.3,-0.2 -12,-0 -12,1.3z"
       android:fillColor="#000000"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M14,28.4c-0.6,0.8 -2.1,1.6 -3.3,1.8 -2.5,0.3 -2.6,1.8 -0.3,3.3 1.1,0.7 2.3,0.2 4.5,-1.9 1.7,-1.6 2.8,-3.3 2.5,-3.8 -0.8,-1.2 -2,-1 -3.4,0.6z"
+      android:pathData="M16.5,24.1c-1.5,2.3 1.5,3 12.1,2.7 8.9,-0.2 10.9,-0.6 10.9,-1.8 0,-1.2 -2,-1.6 -11.2,-1.8 -7.4,-0.2 -11.4,0.1 -11.8,0.9z"
       android:fillColor="#000000"
       android:strokeColor="#00000000"/>
   <path
-      android:pathData="M22.7,28.6c-1.9,1.9 0.1,2.5 8.6,2.2 5.5,-0.2 9.1,-0.7 9,-1.3 -0.3,-1.1 -16.5,-1.9 -17.6,-0.9z"
+      android:pathData="M9.5,25c0.3,0.5 1,1 1.6,1 0.5,-0 0.9,-0.5 0.9,-1 0,-0.6 -0.7,-1 -1.6,-1 -0.8,-0 -1.2,0.4 -0.9,1z"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M9.7,31.6c-0.8,0.8 0.1,2.4 1.4,2.4 0.5,-0 0.9,-0.7 0.9,-1.5 0,-1.5 -1.2,-2 -2.3,-0.9z"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"/>
+  <path
+      android:pathData="M16,32.5c0,1.3 1.7,1.5 12.3,1.3 16,-0.4 15.8,-2.2 -0.3,-2.6 -10.3,-0.2 -12,-0 -12,1.3z"
       android:fillColor="#000000"
       android:strokeColor="#00000000"/>
 </vector>
