--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -92,11 +92,13 @@
                             android:id="@+id/arrowIcon"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_arrow"
+                            android:src="@drawable/ic_arrow1"
+                            android:tint="@color/text_light"
                             android:contentDescription="@string/arrow"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            tools:ignore="UseAppTint" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -132,12 +134,13 @@
                             android:id="@+id/arrowIcon"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_arrow"
+                            android:src="@drawable/ic_arrow1"
+                            android:tint="@color/text_light"
                             android:contentDescription="@string/arrow"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            tools:ignore="DuplicateIds" />
+                            tools:ignore="DuplicateIds,UseAppTint" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -173,12 +176,13 @@
                             android:id="@+id/arrowIcon"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_arrow"
+                            android:src="@drawable/ic_arrow1"
+                            android:tint="@color/text_light"
                             android:contentDescription="@string/arrow"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            tools:ignore="DuplicateIds" />
+                            tools:ignore="DuplicateIds,UseAppTint" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
