--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -62,6 +62,56 @@
                 android:background="@color/background_light"
                 android:padding="16dp">
 
+                <!-- Новости -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/CardNews"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_light"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp">
+
+
+                        <!-- Иконка -->
+                        <ImageView
+                            android:id="@+id/cardNews"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:contentDescription="Иконка карточки"
+                            android:src="@drawable/ic_checklist1"
+                            android:tint="@color/text_light"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="HardcodedText,UseAppTint" />
+
+                        <!-- Текст -->
+                        <TextView
+                            android:id="@+id/cardText10"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/news"
+                            android:textColor="@color/text_light"
+                            android:textSize="16sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintStart_toEndOf="@id/cardNews"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="HardcodedText" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+
                 <!-- Карточка Личная ведомость -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/CardStatement"
@@ -587,9 +637,6 @@
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
             </LinearLayout>
         </ScrollView>
