--- a/app/src/main/res/layout/main_employees.xml
+++ b/app/src/main/res/layout/main_employees.xml
@@ -70,11 +70,12 @@
                     app:cardElevation="4dp">
 
                     <LinearLayout
+                        android:id="@+id/employeesContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="8dp"
-                        android:gravity="center_vertical">
+                        android:orientation="vertical"
+                        android:background="@color/background_light"
+                        android:padding="16dp">
 
                         <ImageView
                             android:id="@+id/employeePhoto"
