--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,18 @@
         <!-- Основной фон приложения -->
         <item name="android:windowBackground">@color/white</item>
     </style>
+
+    <style name="TextTitle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#333</item>
+        <item name="android:layout_marginTop">12dp</item>
+    </style>
+
+    <style name="TextValue">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#555</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+
 </resources>
