--- a/app/src/main/res/layout/activity_staff.xml
+++ b/app/src/main/res/layout/activity_staff.xml
@@ -14,9 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@color/header_footer_light"
         android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/logoImageView"
@@ -30,27 +28,51 @@
 
         <TextView
             android:id="@+id/headerTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Сотрудники"
+            android:text="@string/employees"
             android:textColor="@color/text_light"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textAlignment="center"
+            app:layout_constraintStart_toEndOf="@id/logoImageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             tools:ignore="HardcodedText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Поле поиска -->
+    <LinearLayout
+        android:id="@+id/searchContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@drawable/search_view_background"
+        android:padding="4dp"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="Поиск сотрудников"
+            android:iconifiedByDefault="false"
+            android:background="@android:color/transparent"/>
+    </LinearLayout>
 
     <!-- Список сотрудников -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/staffRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/background_light"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/headerLayout"
+        app:layout_constraintTop_toBottomOf="@id/searchContainer"
         app:layout_constraintBottom_toTopOf="@id/footerLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
