--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -86,7 +86,7 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:contentDescription="Иконка карточки"
-                            android:src="@drawable/ic_checklist1"
+                            android:src="@drawable/ic_news"
                             android:tint="@color/text_light"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
