--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,4 +48,14 @@
 
     <color name="hint_color">#808080</color>
 
+    <!-- Светлая тема -->
+    <color name="card_background_light">#FFFFFF</color>
+    <color name="card_text_light">#212121</color>
+    <color name="icon_tint_light">#6200EE</color>
+
+    <!-- Темная тема -->
+    <color name="card_background_dark">#424242</color>
+    <color name="card_text_dark">#FFFFFF</color>
+    <color name="icon_tint_dark">#BB86FC</color>
+
 </resources>
