--- a/app/src/main/res/layout/main_basic.xml
+++ b/app/src/main/res/layout/main_basic.xml
@@ -87,10 +87,10 @@
                     android:id="@+id/callText3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Один из важнейших вещей студента - студик. Он показывает твой статус студента, а также предоставляет скидки на пригородный проезд.
-\nСтудик тебе выдадут уже после торжественной линейки, если ты успел сдать фотографию на него.
-\nНе забывай ежегодно продлять его в деканате, чтобы получать скидки!
-\n*При потере или случайной почре обратись в деканат.\n"
+                    android:text="Один из важнейших вещей студента - студенческий билет. Он показывает твой статус студента, а также предоставляет скидки на пригородный проезд.
+\nСтуденческий выдадут после торжественной линейки, если вы успели сдать фотографию на него.
+\nНе забывате ежегодно продлять его в деканате, чтобы получать скидки!
+\n*При потере или случайной порче обратитесь в деканат.\n"
                     android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
@@ -111,9 +111,9 @@
                     android:id="@+id/callText5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Является пластиковой карточкой с чипом внутри, которая позволит тебе пройти через турникет в институт или общежитие. У студентов проживающих в общежитии отдельный пропус, действующий на турникеты в общежитии.
-\nВыдают пропус в течении месяца после начала учёбы.
-\n*При неисправной работе пропуска обратись в деканат.\n"
+                    android:text="Является пластиковой карточкой с чипом внутри, которая позволит проходить через турникет на территорию института или общежития. У студентов проживающих в общежитии отдельный пропус, действующий на турникеты в общежитии.
+\nВыдают пропуск в течении месяца после начала учёбы.
+\n*При неисправной работе пропуска обратитесь в деканат.\n"
                     android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
@@ -134,8 +134,8 @@
                     android:id="@+id/callText7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Банковская на которую падают твои кровные гроши, если ты являешься студентом бюджетной формы обучения.
-\nО получении карты тебе сообщит деканат."
+                    android:text="Банковская карта на которую зачисляют стипендию, если вы являетесь студентом бюджетной формы обучения.
+\nО получении карты вам сообщит деканат."
                     android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
