--- a/app/src/main/res/layout/main_questions.xml
+++ b/app/src/main/res/layout/main_questions.xml
@@ -86,7 +86,7 @@
                         android:id="@+id/answerText1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Да, суббота является учебным днём, следи за рассписанием занятий и узнаешь в какую субботу ты учишься."
+                        android:text="Да, суббота является учебным днём, следите за рассписанием занятий и узнаете в какую субботу вы учитесь."
                         android:visibility="gone"
                         android:paddingTop="8dp"
                         android:textColor="@color/text_light"
@@ -116,7 +116,7 @@
                         android:id="@+id/answerText2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Расписание доступно в приложении в разделе 'Расписание' (иконка календаря), а также об мелких изменениях ты узнаешь в группе в телеграмме."
+                        android:text="Расписание доступно в приложении в разделе 'Расписание' (иконка календаря), а также об мелких изменениях вы узнаете в группе в телеграмме."
                         android:visibility="gone"
                         android:paddingTop="8dp"
                         android:textColor="@color/text_light"
@@ -146,7 +146,7 @@
                         android:id="@+id/answerText3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Задолжность можно сдать следующим образом - нужно получить хвостовку в деканате, её выдаст твой методист, если попросишь, далее договориться с преподователем о пересдаче. После успешной пересдаче предмета преподаватель отнесет твою хвостовку в деканат и тебя запишут в ведомость."
+                        android:text="Задолжность можно сдать следующим образом - нужно получить хвостовку в деканате, её выдаст вам методист, далее нужно договориться с преподователем о пересдаче. После успешной пересдаче предмета преподаватель отнесет вашу хвостовку в деканат и вас запишут в ведомость."
                         android:visibility="gone"
                         android:paddingTop="8dp"
                         android:textColor="@color/text_light"
@@ -176,7 +176,7 @@
                         android:id="@+id/answerText4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Тебе нужно обратиться в деканат и написать заявление, через время тебе выдадут новый студак или пропуск."
+                        android:text="Вам нужно обратиться в деканат и написать заявление, через время вам выдадут новый студенческий билет или пропуск."
                         android:visibility="gone"
                         android:paddingTop="8dp"
                         android:textColor="@color/text_light"
