--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
 
     <style name="Theme.Urtisi" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorOnPrimary">@android:color/white</item>
+        <item name="android:alertDialogTheme">@style/AlertDialogCustom</item>
+        <item name="colorAccent">@android:color/black</item>
+        <item name="colorControlActivated">@android:color/black</item>
     </style>
 
     <style name="Theme.Urtisi.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -15,5 +18,28 @@
         <item name="colorOnPrimary">@color/colorOnPrimaryDark</item>
     </style>
 
+    <!-- Стиль для диалога -->
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:buttonBarButtonStyle">@style/DialogButtonStyle</item>
+        <item name="colorAccent">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <item name="android:colorControlActivated">@android:color/black</item>
+        <item name="android:colorControlNormal">@android:color/black</item>
+    </style>
+
+    <!-- Стиль для кнопок диалога -->
+    <style name="DialogButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Стиль для диалога с закругленными углами -->
+    <style name="RoundedDialog" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="dialogCornerRadius">16dp</item>
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <item name="buttonBarPositiveButtonStyle">@style/DialogButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/DialogButtonStyle</item>
+    </style>
 
 </resources>
