--- a/app/src/main/res/layout/main_questions.xml
+++ b/app/src/main/res/layout/main_questions.xml
@@ -241,6 +241,7 @@ https://uisi.ru/uisi/abiturient/"
                         android:visibility="gone"
                         android:autoLink="web"
                         android:paddingTop="8dp"
+                        android:textColorLink="@color/link_color"
                         android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
                 </LinearLayout>
@@ -298,7 +299,7 @@ https://uisi.ru/uisi/abiturient/"
                         android:id="@+id/answerText8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Учебный год начинается с 1 сентября. У первокурсников в этот день торжественная линейка, старшие курсы начинают учиться чуть позже, это можно узнать из рассписания."
+                        android:text="Учебный год начинается с 1 сентября. У первокурсников в этот день торжественная линейка, старшие курсы начинают учиться чуть позже, это можно узнать из расписания."
                         android:visibility="gone"
                         android:paddingTop="8dp"
                         android:textColor="@color/text_light"
