--- a/app/src/main/res/layout/settings_help.xml
+++ b/app/src/main/res/layout/settings_help.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/headerTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/help"
+                android:text="О приложении"
                 android:textColor="@color/text_light"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
