--- a/app/src/main/res/layout/settings_link.xml
+++ b/app/src/main/res/layout/settings_link.xml
@@ -81,6 +81,7 @@
 \n
 \n"
                     android:textColor="@color/text_light"
+                    android:textColorLink="@color/link_color"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     android:autoLink="web"
