--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -111,11 +111,12 @@
             android:id="@+id/scheduleRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="8dp"
-            android:clipToPadding="false"
             android:background="@color/background_light"
+            android:clipToPadding="false"
+            android:padding="8dp"
+            app:layout_constraintBottom_toTopOf="@id/footerLayout"
             app:layout_constraintTop_toBottomOf="@id/navigationLayout"
-            app:layout_constraintBottom_toTopOf="@id/footerLayout"/>
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <!-- Нижняя панель -->
         <androidx.constraintlayout.widget.ConstraintLayout
